<!--
 This file is part of windvolt.org.

 Copyright (c) 2020 Max Sumer

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>


    <!-- windvolt -->
    <string name="app_name">windvolt</string>
    <string name="app_disclaimer">*Zur Zeit sammeln wir selbst mit Deiner Zustimmung keine Daten.</string>

    <!-- welcome page -->
    <string name="welcome_label">Übersicht</string>
    <string name="welcome_hello">Erneuerbare Energie Deutschland</string>


    <!-- about -->
    <string name="about_action">über</string>
    <string name="about_label">windvolt 1.10</string>
    <string name="about_hello">windvolt</string>

    <string name="about_message">windvolt targets the usage and pricing of renewable ernergy, especially wind</string>


    <!-- location -->
    <string name="location_notice">Wähle einen Ort</string>
    <string name="location_saved">gespeichert</string>


    <!-- recommendation -->
    <string name="recommendation_unavailable">entscheide heute selbst</string>

    <string name="recommendation_load_prevent">laden nur falls nötig</string>
    <string name="recommendation_load_small">kleine Geräte laden</string>
    <string name="recommendation_load_more">große Geräte laden</string>
    <string name="recommendation_load_all">alle Geräte laden</string>

    <!-- story -->
    <string name="story_action">Story</string>
    <string name="story_title">windvolt story</string>



    <!-- settings -->
    <string name="settings_action">Einstellungen</string>
    <string name="settings_hello">Einstellungen vornehmen</string>



    <!-- devices -->
    <string name="devices_action">Geräte</string>
    <string name="devices_title">meine Geräte</string>

    <string name="device_sumup">Gesamt</string>

    <string name="device_action_add">hinzufügen</string>
    <string name="device_action_delete">entfernen</string>
    <string name="device_action_cancel">abbrechen</string>

    <!-- device add -->
    <string name="device_add_title">Gerät hinzufügen</string>

    <string name="device_add_name">Name</string>
    <string name="device_add_type">Typ</string>
    <string name="device_add_capacity">Kapazität</string>

    <!-- device del -->
    <string name="device_del_title">Gerät entfernen</string>

    <string name="device_del_name">Position</string>



    <!-- page0 'wind' -->
    <string name="page0_label">story</string>
    <string name="page0_hello">windvolt story</string>
    <string name="page0_open">windvolt</string>
    <string name="page0_exit">zurück</string>

    <!-- page1 'solar' -->
    <string name="page1_label">who is who</string>
    <string name="page1_hello">who is who</string>
    <string name="page1_open">whoiswho</string>
    <string name="page1_exit">zurück</string>

    <!-- page2 'geothermal' -->
    <string name="page2_label">Markt</string>
    <string name="page2_hello">Geschäftsmodell v0</string>
    <string name="page2_open">economics</string>
    <string name="page2_exit">zurück</string>

    <!-- page3 'neutronal' -->
    <string name="page3_label">community</string>
    <string name="page3_hello">Wind Community</string>
    <string name="page3_open">links</string>
    <string name="page3_exit">zurück</string>



    <!-- preferences -->
    <string name="location_category">Ort</string>

    <string name="location_title">Dein Ort</string>
    <string name="location_summary">Freie Ortsangabe.\nDie App neu starten.</string>

    <string name="location_longitude">Längengrad.</string>
    <string name="location_longitude_summary">Freie Längenangabe.\nDie App neu starten.</string>

    <string name="location_latitude">Breitengrad.</string>
    <string name="location_latitude_summary">Freie Breitenangabe.\nDie App neu starten.</string>

    <string name="location_services">Dienste</string>
    <string name="location_services_summary">*Durch die Verwendung von Diensten gibst Du Daten preis.\nDie App neu starten.</string>



    <string name="battery_category">Betterie</string>

    <string name="battery_state">Batteriestatus.</string>
    <string name="battry_summary">Ich interessiere mich für den Stromverbrauch meines Smartphones.\nDie App neu starten.</string>



    <string name="community_category">Community</string>

    <string name="sharing_title">Community beitreten</string>
    <string name="sharing_summary">Ich teile meine Gerätedaten und verbessere damit die Empfehlungen.</string>

    <string name="notification_title">Benachrichtigungen empfangen</string>
    <string name="notification_summary">Ich will benachrichtigt werden wenn sich das Laden lohnt.</string>

</resources>