<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of windvolt.org.

 Copyright (c) 2020 Max Sumer

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/android"
    tools:ignore="NamespaceTypo">

    <PreferenceCategory
        app:title="@string/location_category"
        >

        <EditTextPreference
            app:key="location_input"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:summary="@string/location_summary"
            app:title="@string/location_title">
        </EditTextPreference>

        <!--
        -->


        <EditTextPreference
            app:key="location_latitude"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:summary="@string/location_latitude_summary"
            app:title="@string/location_latitude" />

        <EditTextPreference
            app:key="location_longitude"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:summary="@string/location_longitude_summary"
            app:title="@string/location_longitude" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="location_services"
            app:summary="@string/location_services_summary"
            app:title="@string/location_services" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/community_category">

        <CheckBoxPreference
            app:defaultValue="false"
            app:enabled="false"
            app:key="community_updates"
            app:summary="@string/sharing_summary"
            app:title="@string/sharing_title">

        </CheckBoxPreference>

        <CheckBoxPreference
            app:defaultValue="false"
            app:enabled="false"
            app:key="community_notifications"
            app:summary="@string/notification_summary"
            app:title="@string/notification_title">

        </CheckBoxPreference>

    </PreferenceCategory>

</PreferenceScreen>