<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of windvolt.org.

 Copyright (c) 2020 Max Sumer

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gui_roundbox"
    tools:context=".Welcome">


    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/web_widget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/web_widget"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/recommend_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_label">

        <WebView
            android:id="@+id/welcome_widget"
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:layout_gravity="center">

        </WebView>

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Quelle: windjournal.de, ohne Gewähr" />
    </LinearLayout>

    <fragment
        android:id="@+id/recommend_fragment"
        android:name="org.windvolt.recommendation.Recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web_widget"
        tools:layout="@layout/recommendation" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommend_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/open_page0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gui_roundbox"
                android:contentDescription="@string/page0_hello"
                android:src="@drawable/page0_v10" />

            <ImageButton
                android:id="@+id/open_page1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gui_roundbox"
                android:contentDescription="@string/page1_hello"
                android:src="@drawable/page1_v10" />

            <ImageButton
                android:id="@+id/open_page2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gui_roundbox"
                android:contentDescription="@string/page2_hello"
                android:src="@drawable/page2_v10" />

            <ImageButton
                android:id="@+id/open_page3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gui_roundbox"
                android:contentDescription="@string/page3_hello"
                android:src="@drawable/page3_v10a" />
        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_open_devices"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="devices"
        android:focusable="true"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/gui_colorring" />


</androidx.constraintlayout.widget.ConstraintLayout>